spin_configs/1.0-envoy-proxy/envoy-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '36'
    field.cattle.io/publicEndpoints: >-
      [{"addresses":["128.55.206.106"],"port":443,"protocol":"HTTPS","serviceName":"iaas-gnn4itk:envoy-service","ingressName":"iaas-gnn4itk:ingress","hostname":"iaasdemo.ml4phys.com","path":"/","allNodes":true},{"addresses":["128.55.206.106"],"port":443,"protocol":"HTTPS","serviceName":"iaas-gnn4itk:envoy-service","ingressName":"iaas-gnn4itk:ingress","hostname":"ingress.iaas-gnn4itk.production.svc.spin.nersc.org","path":"/","allNodes":true}]
    nersc.gov/collab_uids: ''
    nersc.gov/gid: '76739'
    nersc.gov/gids: >-
      4871,53006,57596,72330,76739,49584,78767,78781,81765,74560,95991,96414,103452,103453,110987
    nersc.gov/roles: user
    nersc.gov/uid: '76739'
    nersc.gov/username: xju
  creationTimestamp: '2025-09-08T18:30:50Z'
  generation: 43
  labels:
    workload.user.cattle.io/workloadselector: apps.deployment-iaas-gnn4itk-envoy-proxy
  managedFields:
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:field.cattle.io/publicEndpoints: {}
            f:nersc.gov/gid: {}
            f:nersc.gov/username: {}
          f:labels:
            .: {}
            f:workload.user.cattle.io/workloadselector: {}
        f:spec:
          f:progressDeadlineSeconds: {}
          f:replicas: {}
          f:revisionHistoryLimit: {}
          f:selector: {}
          f:strategy:
            f:rollingUpdate:
              .: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
            f:type: {}
          f:template:
            f:metadata:
              f:annotations:
                f:cattle.io/timestamp: {}
              f:labels:
                .: {}
                f:workload.user.cattle.io/workloadselector: {}
              f:namespace: {}
            f:spec:
              f:affinity:
                .: {}
                f:podAffinity: {}
                f:podAntiAffinity: {}
              f:containers:
                k:{"name":"container-0"}:
                  .: {}
                  f:command: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:ports:
                    .: {}
                    k:{"containerPort":9097,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:name: {}
                      f:protocol: {}
                    k:{"containerPort":9191,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:name: {}
                      f:protocol: {}
                  f:resources: {}
                  f:securityContext:
                    .: {}
                    f:allowPrivilegeEscalation: {}
                    f:capabilities:
                      .: {}
                      f:drop: {}
                    f:privileged: {}
                    f:readOnlyRootFilesystem: {}
                    f:runAsNonRoot: {}
                    f:runAsUser: {}
                  f:stdin: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
                  f:tty: {}
                  f:volumeMounts:
                    .: {}
                    k:{"mountPath":"/envoy-config"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
              f:dnsConfig: {}
              f:dnsPolicy: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext:
                .: {}
                f:fsGroup: {}
                f:runAsGroup: {}
                f:runAsUser: {}
              f:terminationGracePeriodSeconds: {}
              f:volumes:
                .: {}
                k:{"name":"vol-aifeu"}:
                  .: {}
                  f:hostPath:
                    .: {}
                    f:path: {}
                    f:type: {}
                  f:name: {}
      manager: agent
      operation: Update
      time: '2025-09-10T14:36:32Z'
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:deployment.kubernetes.io/revision: {}
        f:status:
          f:availableReplicas: {}
          f:collisionCount: {}
          f:conditions:
            .: {}
            k:{"type":"Available"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
            k:{"type":"Progressing"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
          f:observedGeneration: {}
          f:readyReplicas: {}
          f:replicas: {}
          f:updatedReplicas: {}
      manager: kube-controller-manager
      operation: Update
      subresource: status
      time: '2025-09-10T14:36:36Z'
  name: envoy-proxy
  namespace: iaas-gnn4itk
  resourceVersion: '1007829183'
  uid: eb7133b9-b09a-4386-9d52-352d2769a762
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-iaas-gnn4itk-envoy-proxy
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: '2025-09-10T14:36:32Z'
        nersc.gov/collab_uids: ''
        nersc.gov/gid: '76739'
        nersc.gov/gids: >-
          4871,53006,57596,72330,76739,49584,78767,78781,81765,74560,95991,96414,103452,103453,110987
        nersc.gov/roles: user
        nersc.gov/uid: '76739'
        nersc.gov/username: xju
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-iaas-gnn4itk-envoy-proxy
      namespace: iaas-gnn4itk
    spec:
      affinity:
        podAffinity: {}
        podAntiAffinity: {}
      containers:
        - command:
            - envoy
            - '-c'
            - /envoy-config/envoy_config.yaml
          image: envoyproxy/envoy:v1.34.7
          imagePullPolicy: Always
          name: container-0
          ports:
            - containerPort: 9191
              name: tcp-proxy-port
              protocol: TCP
            - containerPort: 9097
              name: listener
              protocol: TCP
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 76739
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
          volumeMounts:
            - mountPath: /envoy-config
              name: vol-aifeu
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 76739
        runAsGroup: 76739
        runAsUser: 76739
      terminationGracePeriodSeconds: 30
      volumes:
        - hostPath:
            path: /global/cfs/cdirs/m2845/atlas-spin
            type: Directory
          name: vol-aifeu
status:
  availableReplicas: 1
  collisionCount: 1
  conditions:
    - lastTransitionTime: '2025-09-08T23:40:21Z'
      lastUpdateTime: '2025-09-08T23:40:21Z'
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: 'True'
      type: Available
    - lastTransitionTime: '2025-09-08T23:35:39Z'
      lastUpdateTime: '2025-09-10T14:36:36Z'
      message: ReplicaSet "envoy-proxy-747f758858" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: 'True'
      type: Progressing
  observedGeneration: 43
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
